--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   color: white;
+  font-family: "Roboto Mono", monospace;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.globe {
+  width: min(calc(100vw * 2 / 3), 100vh);
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Info {
+  width: calc(max(calc(100vw / 3), calc(100vw - 100vh)) - 5rem);
+  padding-top: 10vh;
+  z-index: 100;
+  font-size: 5rem;
+}
+
+.links {
+  margin-top: 1rem;
+  display: flex;
+}
+
+.links a {
+  display: block;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+.links a:hover {
+  font-weight: bold;
+}
+
+.closerMouse {
+  margin: 0;
+  margin-left: 0;
+  transition: margin ease-in-out 30ms;
+}
+
+.closerMouse:hover {
+  margin-left: 1rem;
+}
+
+@media only screen and (max-width: 849px) {
+  .App {
+    justify-content: space-between;
   }
-  to {
-    transform: rotate(360deg);
+  .globe {
+    width: 90vw;
+    height: 90vw;
+  }
+  .Info {
+    padding-top: 0;
+    font-size: 2rem;
+    width: 100%;
+  }
+  .links {
+    flex-direction: row;
+  }
+  .links a {
+    font-size: 1rem;
+  }
+
+  .closerMouse:hover {
+    margin-left: 0rem;
+  }
+}
+
+@media only screen and (min-width: 850px) {
+  .links {
+    flex-direction: column;
   }
 }
