--- a/src/Resume/Resume.scss
+++ b/src/Resume/Resume.scss
@@ -1,4 +1,106 @@
 .resume-contents {
+  color: #efefef;
   width: 100%;
   height: 100%;
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  .resume-tabs {
+    background-color: #282c34;
+    position: relative;
+    & span {
+      margin: 1rem;
+      font-size: 1.5rem;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .tab-underline {
+      transition: all 500ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+      --width: 0px;
+      --x: 0px;
+      background-color: #ff3030;
+      min-width: var(--width);
+      width: var(--width);
+
+      height: 3px;
+      left: var(--x);
+      bottom: 0;
+      position: absolute;
+      border-radius: 3px;
+    }
+  }
+
+  .resume-overview {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    width: 100%;
+    h2 {
+      margin-bottom: 0rem;
+    }
+    h3 {
+      margin-top: 1rem;
+      margin-bottom: 0;
+    }
+    .overview-left {
+      margin: 1rem;
+      width: 20rem;
+      ul {
+        margin-top: 0;
+      }
+      h4 {
+        margin-bottom: 0;
+      }
+      .languages {
+        overflow-y: scroll;
+      }
+      .portrait {
+        width: 15rem;
+        display: block;
+      }
+    }
+  }
+
+  .resume-experience {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    width: 100%;
+    .experience-col {
+      width: 40%;
+      margin: 1rem;
+      .bulletin-logo {
+        margin-top: 1rem;
+        margin-bottom: 0rem;
+        width: 10rem;
+      }
+      .bisweb-logo {
+        margin-top: 1rem;
+        margin-bottom: 0rem;
+        max-width: 100%;
+        max-height: 7rem;
+      }
+      h1 {
+        margin-bottom: 0rem;
+      }
+      .subText {
+        opacity: 0.7;
+      }
+    }
+  }
+  .resume-education {
+    width: 100%;
+    margin: 1rem;
+    .ubc-logo {
+      width: 30rem;
+    }
+    h2 {
+      margin-bottom: 0;
+    }
+    ul {
+      margin-top: 0;
+    }
+  }
 }
