--- a/src/Projects/Projects.scss
+++ b/src/Projects/Projects.scss
@@ -17,6 +17,8 @@
   background-color: #5f5f5f;
 }
 
+$filters-height: 5rem;
+
 .projects-content {
   position: relative;
   width: 100%;
@@ -29,7 +31,83 @@
   overscroll-behavior: none;
 }
 
+.project-tag-filters {
+  &::before {
+    content: "";
+    height: $filters-height;
+    display: block;
+  }
+  .project-filter-header {
+    color: #efefef;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    .filter-none,
+    .filter-all {
+      margin: 0.5rem;
+      padding: 0 0.25rem;
+      &:hover {
+        cursor: pointer;
+        filter: opacity(0.7);
+      }
+
+      &.active {
+        color: #222222;
+        background-color: #efefef;
+      }
+      color: #efefef;
+      border-color: #efefef;
+      background-color: #222222;
+      border-radius: 12px;
+      border-style: solid;
+    }
+  }
+  .project-filter-section {
+    $filter-height: 1rem;
+    display: flex;
+    .filter {
+      margin: 0.25rem;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+
+      &:hover {
+        cursor: pointer;
+        filter: opacity(0.7);
+      }
+
+      .filter-text {
+        margin-right: 0.2rem;
+      }
+
+      &.active {
+        color: #222222;
+        background-color: #efefef;
+      }
+      color: #efefef;
+      border-color: #efefef;
+      background-color: #222222;
+      border-radius: 7px;
+      border-style: solid;
+
+      font-weight: bold;
+
+      & img,
+      svg {
+        height: $filter-height;
+        width: $filter-height;
+      }
+    }
+  }
+}
+
 .project-card {
+  $card-size: 15rem;
+  $chin-size: 3rem;
+  $tag-size: 2rem;
+  $card-margin: 1rem;
   .card-contents {
     &:hover {
       cursor: pointer;
@@ -37,11 +115,27 @@
     .card-title {
       text-align: center;
       font-family: JetBrainsMono source-code-pro, Menlo, Monaco, Consolas;
+      height: $chin-size;
+    }
+    .card-tags {
+      height: $tag-size;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-start;
+      position: absolute;
+      background-color: #efefef;
+      padding: 2px;
+      border-radius: 7px;
+
+      color: #222222;
+      & svg,
+      img {
+        height: $tag-size;
+        width: $tag-size;
+      }
     }
   }
-  $card-size: 15rem;
-  $chin-size: 3rem;
-  $card-margin: 1rem;
   font-size: 1rem;
   width: $card-size;
   height: $card-size + $chin-size;
@@ -144,6 +238,24 @@
     border-radius: 10px;
     padding: 2rem;
 
+    & img {
+      max-height: 50vh;
+      max-width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+
+    .github-link {
+      font-size: 1rem;
+      flex-direction: row;
+      justify-content: flex-start;
+      display: flex;
+      align-items: center;
+      .vog {
+        margin-right: 1rem;
+      }
+    }
     .article-header {
       width: 100%;
       margin-bottom: 2rem;
