--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,38 @@
 
   display: flex;
   flex-direction: row;
+  z-index: 1001;
+
+  @media (max-width: 900px) {
+    width: 100%;
+    height: 2rem;
+    & .links {
+      flex-direction: row !important;
+      width: calc(100% - 4rem);
+
+      margin-left: 0 !important;
+    }
+    & .dot-container {
+      display: none;
+    }
+    flex-direction: row;
+
+    & .dropdown-container {
+      margin: 1rem;
+      font-size: 2rem;
+      display: unset !important;
+      width: min-content;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    background-color: #282c34;
+  }
+
+  & .dropdown-container {
+    display: none;
+  }
 
   & .dot-container {
     & .dot {
@@ -31,6 +63,7 @@
     font-weight: bold;
     height: 100%;
     margin-left: 4rem;
+
     & a {
       color: #efefef;
       text-decoration: none;
@@ -39,11 +72,26 @@
 }
 
 .router-contents {
+  @media (max-width: 900px) {
+    padding-top: 2rem;
+    max-height: calc(100vh - 2rem);
+  }
+
   max-height: 100vh;
   flex-grow: 1;
   flex-direction: row;
 
   & > div {
+    @media (max-width: 900px) {
+      padding-left: 4rem;
+      padding-right: 4rem;
+      &::before {
+        content: "";
+        height: 2rem;
+        display: block;
+      }
+    }
+
     padding-left: 15rem;
     height: 100vh;
     max-height: 100vh;
